[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.poetry]
name = "consultation-analyser"
version = "0.1.0"
description = ""
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
readme = "README.md"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "consultation_analyser.settings.test"
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  "ignore::FutureWarning:.*huggingface_hub.*",
  "ignore::SyntaxWarning:.*sentence_transformers.*",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "^5.2"
django-environ = "^0.12.0"
psycopg = "^3.2.9"
django-compressor = "^4.5"
django-libsass = "^0.9"
govuk-frontend-jinja = "^3.6.0"
pydot = "^4.0.1"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
boto3 = "^1.39.9"
pydantic = "^2.11.7"
datamodel-code-generator = "^0.31.2"
django-types = "^0.22.0"
django-waffle = "^5.0.0"
django-magic-link = "^1.1.0"
django-crispy-forms = "^2.3"
crispy-forms-gds = "^2.0.1"
django-gov-notify = { git = "https://github.com/i-dot-ai/django-gov-notify", branch = "support-python-3-12" }
sentry-sdk = {version = ">=2.24.1", extras = ["django", "redis", "rq"]}
psutil = "^7.0.0"
pytest-random-order = "^1.2.0"
django-rq = "^3.0.1"
django-redis = "^6.0.0"
honcho = "^2.0.0"
django-storages = "^1.14.6"
setuptools = "^80.9.0"
django-simple-history = "^3.10.1"
openpyxl = "^3.1.5"
pandas = "^2.3.1"
django-debug-toolbar = "^5.2.0"
moto = "^5.1.8"
pyflame = "^0.3.2"
freezegun = "^1.5.3"
django-test-migrations = "^1.5.0"
pytest-lazy-fixtures = "^1.3.2"
pgvector = "^0.4.1"
openai = "^1.97.0"
tiktoken = "^0.9.0"
django-silk = "^5.4.0"

[tool.poetry.group.development.dependencies]
ruff = "^0.12.4"
pre-commit = "^4.2.0"
factory_boy = "^3.3.1"
django-extensions = "^4.1"
mypy = "^1.17.0"

[tool.mypy]
files = '**/*.py'
exclude = ['^consultation_analyser/consultations/migrations/']

[tool.poetry.group.test.dependencies]
pytest-django = "^4.11.1"
django-webtest = "^1.9.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
