[project]
name = "consult"
version = "0.1.0"
description = "Consult backend application"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.43.32",
  "django>=6.0.5",
  "django-environ>=0.12.0",
  "django-filter>=25.2",
  "django-redis>=7.0.0",
  "django-rq>=4.1.0",
  "django-simple-history>=3.11.0",
  "django-storages>=1.14.6",
  "djangorestframework>=3.17.1",
  "djangorestframework-simplejwt[crypto]>=5.5.1",
  "drf-nested-routers>=0.95.0",
  "drf-orjson-renderer>=1.8.0",
  "drf-spectacular==0.29.0",
  "factory_boy>=3.3.1",
  "gunicorn>=26.0.0",
  "i-dot-ai-utilities[auth]>=0.4.4",
  "openai>=2.43.0",
  "pgvector>=0.4.2",
  "psycopg>=3.3.4",
  "pydantic>=2.13.4",
  "pytest-random-order>=1.2.0",
  "sentry-sdk[django,redis,rq]>=2.61.1",
  "themefinder>=0.8.2",
  "werkzeug==3.1.8",
]

[dependency-groups]
dev = [
  "django-extensions>=4.1",
  "pydot>=4.0.1",
  "django-test-migrations>=1.5.0",
  "django-types>=0.24.0",
  "freezegun>=1.5.5",
  "honcho>=2.0.0",
  "moto>=5.2.2",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  "pytest-lazy-fixtures>=1.4.0",
  "ruff>=0.15.17",
  "pytest-django>=4.11.1",
  "django-webtest>=1.9.14",
]

[tool.uv]
exclude-newer = "P14D"
exclude-newer-package = {"i-dot-ai-utilities" = "2026-06-04", "pydantic-settings" = "2026-07-01", "cryptography" = "2026-07-01", "langchain" = "2026-07-01", "langsmith" = "2026-07-01"}
override-dependencies = [
  "cryptography>=49.0.0",
  "langchain-core>=1.3.3",
]

[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.test"
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  "ignore::FutureWarning:.*huggingface_hub.*",
  "ignore::SyntaxWarning:.*sentence_transformers.*",
]

[tool.mypy]
files = '**/*.py'
exclude = ['^consultations/migrations/']

[tool.bandit]
exclude = "*/.cruft.json"
