[project]
name = "pipeline-mapping"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "themefinder",
    "boto3>=1.42.17",
    "pandas>=2.2.2",
    "urllib3>=2.0.0",
]

[tool.uv.sources]
themefinder = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["assign_themes_script.py"]
