[project]
name = "pipeline-mapping"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "themefinder",
    "pipeline-common",
    "boto3>=1.42.17",
    "pandas>=2.2.2",
    "urllib3>=2.0.0",
    "structlog>=23.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
themefinder = { workspace = true }
pipeline-common = { workspace = true }
