[project]
name = "pipeline-sign-off"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "themefinder",
    "boto3>=1.42.17",
    "pandas>=2.2.2",
    "urllib3>=2.0.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "sentry-sdk>=2.61.1",
]

[tool.uv]
package = false

[tool.uv.sources]
themefinder = { workspace = true }
