[project]
name = "consult-scripts"
version = "0.1.0"
description = "Consultation setup CLIs (validate Q.U. workbooks, build ThemeFinder inputs, upload to S3)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42",
    "python-dotenv>=1.0",
    "openai>=2.41.1",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "sentry-sdk>=2.62.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "xlsxwriter>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
