[project]
name = "themefinder"
version = "0.8.2"
description = "A topic modelling Python package designed for analysing one-to-many question-answer data eg free-text survey responses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "i.AI", email = "packages@cabinetoffice.gov.uk"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "openai>=1.0.0",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "langfuse>=3.12.1",
    "boto3>=1.29",
    "scikit-learn",
    "openpyxl>=3.1.5",
    "pyarrow>=15.0.0",
    "toml>=0.10.2",
    "nest-asyncio>=1.6.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "protobuf==6.33.5",
    "cryptography==46.0.5",
    "langchain-core==1.2.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.10",
    "sentence-transformers>=5.2.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-material>=9.5.50",
]
vertex = [
    "langchain-google-genai>=2.0.0",  # For ChatGoogleGenerativeAI (Gemini)
    "langchain-google-vertexai>=3.2.1",  # For ChatAnthropicVertex (Claude)
    "google-cloud-aiplatform>=1.130.0",
    "anthropic>=0.77.0",  # Required for Claude via Vertex AI Model Garden
]

[project.urls]
Repository = "https://github.com/i-dot-ai/themefinder/"
Documentation = "https://i-dot-ai.github.io/themefinder/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
